# vestim_micros

./: .gitignore  CLIENT_SERVER_GUIDE.md  COMPREHENSIVE_GUI_FEATURES.md  CONTRIBUTING.md  FIXES_APPLIED.md  FNN_REGULARIZATION_SUMMARY.md  GPU_COMPATIBILITY_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INSTALLATION_GUIDE.md  INSTALL_INFO.txt  LSTM_DATA_LEAKAGE_FIX.md  LSTM_NAN_DEBUGGING_GUIDE.md  LSTM_PERFORMANCE_OPTIMIZATIONS.md  LSTM_TRAINING_STABILITY_FIX.md  MIGRATION_COMPLETE.md  MODEL_ARCHITECTURE_DOCUMENTATION.md  OPTUNA_CONFIGURATION_GUIDE.md  OPTUNA_INTEGRATION.md  OVERFITTING_FIX_COMPLETE.md  PACKAGING_INSTRUCTIONS.md  PACKAGING_STATUS.md  PERFORMANCE_OPTIMIZATION_ANALYSIS.md  PyBattML_2.0.1_2025_September_22_tvo_199_standalone_test.spec  PyBattML_Complete_Installer_StandaloneTest.spec  QUICK_START_GUIDE.md  QUICK_START_LSTM_OPTIMIZATION.md  README.md  RNN_LAYER_SIZES_GUIDE.md  RNN_VARIABLE_ARCHITECTURE.md  STRUCTURE_REORGANIZATION.md  USER_README.md  Untitled Diagram.drawio  WINDOWS_REMOTE_GUIDE.md  analyze_vestim_processes.sh  build.bat  build_199.bat  build_exe.py  build_gpu_general.bat  build_share_package.sh  (+69 more)
.vestim_web/: pyvenv.cfg
build_env/: pyvenv.cfg
defaults_templates/: README.md  RNN_LAYER_SIZES_EXAMPLE.json  augmentation_settings_last_used.json  default_grid_search.json  filter_settings_last_used.json  grid_search_fnn.json  grid_search_gru.json  grid_search_lstm.json  hyperparams_last_used.json  hyperparams_lstm_optimized.json  optuna_fnn.json  optuna_gru.json  optuna_hyperparams_fnn.json  optuna_hyperparams_lstm.json  optuna_lstm.json
(+355 files in other folders)
