[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vestim"
version = "1.0.0"
description = "A tool for ML model training with client-server architecture"
authors = [{name = "Biswanath Dehury", email = "your.email@example.com"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "requests>=2.26.0",
    "PyQt5>=5.15.0",
    "torch>=1.9.0",
    "pydantic>=1.8.0",
    "psutil>=5.8.0",
    "appdirs>=1.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vestim*"]

[project.scripts]
vestim = "vestim.scripts.start:main"
